--- a/styles.css
+++ b/styles.css
@@ -267,70 +267,38 @@ footer {
     text-align: center;
 }
 
-.results-table {
+
+.results-table, .points-table {
     margin: 20px 0;
-    overflow-x: auto;
-}
-
-.results-table table {
-    width: 100%;
-    table-layout: auto;
-}
-
-.results-table th, .results-table td {
-    padding: 10px;
-    text-align: center;
-    border: 1px solid #ddd;
-}
-
-.results-table th {
-    background-color: #194419;
-    color: white;
-    font-weight: bold;
-}
-
-.results-table tr:nth-child(even) {
-    background-color: #f2f2f2;
-}
-
-.results-table tr:hover {
-    background-color: #ffd700;
-    color: #194419;
-}
-.points-table {
-    margin: 20px 0;
-    overflow-x: auto;
-}
-
-.points-table-responsive {
-    overflow-x: auto;
+    overflow-x: auto; 
     width: 100%;
 }
 
-.points-table table {
+.results-table table, .points-table table {
     width: 100%;
-    table-layout: auto;
+    table-layout: fixed; /* Ensures that columns are evenly spaced */
     border-collapse: collapse;
 }
 
-.points-table th, .points-table td {
+.results-table th, .results-table td, .points-table th, .points-table td {
     padding: 10px;
     text-align: center;
     border: 1px solid #ddd;
-    word-wrap: break-word;
+    word-wrap: break-word; /* Allows words to break and prevent overflow */
 }
 
-.points-table th {
+.results-table th, .points-table th {
     background-color: #194419;
     color: white;
     font-weight: bold;
 }
 
-.points-table tr:nth-child(even) {
+.results-table tr:nth-child(even), .points-table tr:nth-child(even) {
     background-color: #f2f2f2;
 }
 
-.points-table tr:hover {
+.results-table tr:hover, .points-table tr:hover {
     background-color: #ffd700;
     color: #194419;
 }
+
