--- a/styles.css
+++ b/styles.css
@@ -133,29 +133,30 @@ img.P4Phero {
     position: relative;
     text-align: center;
     color: white;
-  }
+}
 
-  .center {
-    font-size: 100px;
+.center {
+    font-size: 5vh;
     font-weight: bold;
     color: #194419;
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-  }
+}
 
-  .center1 {
-    font-size: 50px;
+.center1 {
+    max-height: 100px;
+    font-size: 5vh;
     font-weight: bold;
     color: #ffffff;
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-  }
+}
 
-  .center2 {
+.center2 {
     font-size: 100px;
     font-weight: bold;
     color: #ffffff;
@@ -163,7 +164,7 @@ img.P4Phero {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-  }
+}
 
 .headerhis {
     font-size: 20px;
@@ -181,7 +182,7 @@ h2 {
     color: #194419;
 }
 
-h3{
+h3 {
     color: #194419;
 }
 
@@ -267,7 +268,6 @@ footer {
     text-align: center;
 }
 
-
 .results-table, .points-table {
     margin: 20px 0;
     overflow-x: auto; 
@@ -302,3 +302,90 @@ footer {
     color: #194419;
 }
 
+/* Media Queries */
+@media (max-width: 768px) {
+    nav a {
+        float: none;
+        width: 100%;
+        text-align: left;
+        padding: 10px;
+    }
+
+    .container, .containerP4P {
+        width: 90%;
+        padding: 10px 0;
+    }
+
+    .content, .P4Pcontent, .P4Pcontentheros {
+        width: 100%;
+        margin: 20px 0;
+        padding: 20px;
+        font-size: 16px;
+    }
+
+    .hero, .fighter-header {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .fighter-image {
+        margin: 0 0 20px 0;
+        max-width: 100%;
+    }
+
+    .record {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .spotlight-videos, .stats-grid {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .stat {
+        flex: 1 1 100%;
+        margin: 10px 0;
+    }
+
+    h1 {
+        font-size: 1.5em;
+    }
+
+    h2 {
+        font-size: 1.2em;
+    }
+
+    h3 {
+        font-size: 1em;
+    }
+}
+
+@media (max-width: 480px) {
+    header {
+        padding: 10px 0;
+    }
+
+    .content {
+        padding: 20px;
+        margin: 20px 10px;
+    }
+
+    .P4Pcontent, .P4Pcontentheros {
+        margin: 20px 10px;
+        padding: 10px;
+        font-size: 9px;
+    }
+
+    h1 {
+        font-size: 0.5em; /* Smaller font size for h1 */
+    }
+
+    h2 {
+        font-size: 0.5em; /* Smaller font size for h2 */
+    }
+
+    h3 {
+        font-size: 0.5em; /* Smaller font size for h3 */
+    }
+}
