--- a/styles.css
+++ b/styles.css
@@ -309,7 +309,7 @@ footer {
     nav a {
         float: none;
         width: 90%;
-        text-align: left;
+        text-align: center;
         padding: 10px;
     }
 
