--- a/styles.css
+++ b/styles.css
@@ -41,232 +41,20 @@ nav a:hover {
     padding: 20px 0;
 }
 
-.containerP4P {
-    display: flex;
-    width: 90%; 
-    margin: auto;
-    overflow: hidden;
-    align-items: center;
-    padding: 20px 0;
-}
-
 img.heropic {
     width: auto;
     max-width: 150px;
     height: auto;
 }
 
-img.header-image {
-    width: 100%;
-    height: auto;
-    max-width: 1800px;
-    display: block;
-    margin: 0 auto;
-}
-
-img.history1 {
-    max-width: 300px;
-    height: auto;
-    margin-right: 20px;
-}
-
 .content {
     background: white;
     font-size: 20px;
-    padding: 40px; /* Reduced padding for better mobile experience */
-    margin: 20px 0; /* Reduced margin for better mobile experience */
+    padding: 40px;
+    margin: 20px 0;
     border-radius: 5px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    width: 100%; /* Allow full width for responsiveness */
-}
-
-.P4Pcontent {
-    background: white;
-    color: #194419;
-    font-weight: bold;
-    text-decoration: none;
-    display: flex;
-    align-items: center;
-    max-height: 30px;
-    font-size: 20px;
-    padding: 8px;
-    margin: 20px 0; /* Reduced margin for better mobile experience */
-    border-radius: 5px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    width: 100%; /* Allow full width for responsiveness */
-}
-
-.P4Pcontentheros {
-    background: white;
-    color: #194419;
-    font-weight: bold;
-    text-decoration: none;
-    display: block;
-    align-items: center;
-    font-size: 20px;
-    padding: 20px;
-    margin: 20px 0; /* Reduced margin for better mobile experience */
-    border-radius: 5px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    width: 100%; /* Allow full width for responsiveness */
-}
-
-a:link {
-    text-decoration: none;
-}
-
-.hero {
-    display: flex;
-    align-items: center;
-}
-
-img.historyheader {
     width: 100%;
-}
-
-img.P4Phero {
-    max-height: 400px;
-    display: flex;
-    align-items: center;
-}
-
-.ontop {
-    position: relative;
-    text-align: center;
-    color: white;
-}
-
-.center {
-    font-size: 5vh;
-    font-weight: bold;
-    color: #194419;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-}
-
-.center1 {
-    max-height: 100px;
-    font-size: 5vh;
-    font-weight: bold;
-    color: #ffffff;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-}
-
-.center2 {
-    font-size: 100px;
-    font-weight: bold;
-    color: #ffffff;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-}
-
-.headerhis {
-    font-size: 20px;
-    justify-content: center;
-    display: block;
-    align-items: center;
-    padding-bottom: 50px;
-}
-
-h1 {
-    color: #ffffff;
-}
-
-h2 {
-    color: #194419;
-}
-
-h3 {
-    color: #194419;
-}
-
-footer {
-    background-color: #006400;
-    color: white;
-    text-align: center;
-    padding: 10px 0;
-    border-top: 5px solid #ffd700;
-    margin-top: 20px;
-}
-
-.fighter-profile {
-    background-color: #fff;
-    padding: 20px;
-    text-align: center;
-}
-
-.fighter-header {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.fighter-image {
-    max-width: 200px;
-    margin-right: 20px;
-}
-
-.fighter-info {
-    text-align: left;
-    color: #194419;
-}
-
-.record {
-    display: flex;
-    justify-content: space-around;
-    margin-top: 20px;
-}
-
-.record div {
-    text-align: center;
-}
-
-.fight-history {
-    margin-top: 20px;
-}
-
-.spotlight {
-    background-color: #fff;
-    padding: 20px;
-    margin-top: 20px;
-}
-
-.spotlight-videos {
-    display: flex;
-    justify-content: space-around;
-    flex-wrap: wrap;
-}
-
-.video {
-    max-width: 300px;
-    margin: 10px;
-}
-
-.stats {
-    background-color: #fff;
-    padding: 20px;
-    margin-top: 20px;
-}
-
-.stats-grid {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-}
-
-.stat {
-    flex: 1 1 30%;
-    background-color: #f0f0f0;
-    margin: 10px;
-    padding: 10px;
-    text-align: center;
 }
 
 .results-table, .points-table {
@@ -277,7 +65,7 @@ footer {
 
 .results-table table, .points-table table {
     width: 100%;
-    table-layout: fixed; /* Ensures that columns are evenly spaced */
+    table-layout: fixed;
     border-collapse: collapse;
 }
 
@@ -285,8 +73,8 @@ footer {
     padding: 10px;
     text-align: center;
     border: 1px solid #ddd;
-    word-wrap: break-word; /* Allows words to break and prevent overflow */
-    white-space: nowrap; /* Prevents the text from wrapping and ensures horizontal scrolling */
+    word-wrap: break-word;
+    white-space: nowrap;
 }
 
 .results-table th, .points-table th {
@@ -308,52 +96,24 @@ footer {
 @media (max-width: 768px) {
     nav a {
         float: none;
-        width: 90%;
+        width: 100%;
         text-align: center;
         padding: 10px;
     }
 
-    .container, .containerP4P {
-        width: 90%;
-        padding: 0px 0;
+    .container {
+        width: 100%;
+        padding: 10px 0;
     }
 
-    .content, .P4Pcontent, .P4Pcontentheros {
-        width: 90%;
-        margin: 20px 0;
+    .content {
         padding: 20px;
-        font-size: 16px;
-    }
-
-    .hero, .fighter-header {
-        flex-direction: column;
-        align-items: center;
-    }
-
-    .fighter-image {
-        margin: 0 0 20px 0;
-        max-width: 90%;
-    }
-
-    .record {
-        flex-direction: column;
-        align-items: center;
-    }
-
-    .spotlight-videos, .stats-grid {
-        flex-direction: column;
-        align-items: center;
+        margin: 20px 10px;
+        font-size: 18px;
     }
 
     .results-table table, .points-table table {
         font-size: 14px;
-        overflow-y: auto; 
-        overflow-x: auto; 
-    }
-
-    .stat {
-        flex: 1 1 90%;
-        margin: 10px 0;
     }
 
     h1 {
@@ -367,10 +127,6 @@ footer {
     h3 {
         font-size: 1em;
     }
-
-    .center2 {
-        font-size: 2em;
-    }
 }
 
 @media (max-width: 480px) {
@@ -380,32 +136,31 @@ footer {
 
     .content {
         padding: 20px;
-        margin: 20px 10px;
+        margin: 10px;
     }
 
     .results-table table, .points-table table {
-        font-size: 2px; /* Further reduced font size for readability */
-    }
-
-    .P4Pcontent, .P4Pcontentheros {
-        margin: 20px 10px;
-        padding: 10px;
-        font-size: 12px; /* Adjusted for better readability */
+        font-size: 12px;
     }
 
     h1 {
-        font-size: 1.5em; /* Smaller font size for h1 */
+        font-size: 1.2em;
     }
 
     h2 {
-        font-size: 1em; /* Smaller font size for h2 */
+        font-size: 1em;
     }
 
     h3 {
-        font-size: 1em; /* Smaller font size for h3 */
+        font-size: 0.9em;
     }
+}
 
-    .center2 {
-        font-size: 1.5em; /* Smaller font size for .center2 */
-    }
+footer {
+    background-color: #006400;
+    color: white;
+    text-align: center;
+    padding: 10px 0;
+    border-top: 5px solid #ffd700;
+    margin-top: 20px;
 }
