--- a/styles.css
+++ b/styles.css
@@ -275,15 +275,15 @@ footer {
 
 .results-table, .points-table {
     margin: 20px 0;
-    overflow-x: hidden; /* Prevent horizontal scrolling */
+    overflow-x: hidden;
     width: 65%;
     display: flex;
-    flex-direction: column; /* Stack table content vertically */
+    flex-direction: column; 
 }
 
 .results-table table, .points-table table {
     width: 65%;
-    table-layout: auto; /* Ensures that columns are evenly spaced */
+    table-layout: auto; 
     border-collapse: collapse;
 }
 
@@ -291,8 +291,8 @@ footer {
     padding: 10px;
     text-align: center;
     border: 1px solid #ddd;
-    word-wrap: break-word; /* Allows words to break and prevent overflow */
-    white-space: nowrap; /* Prevents the text from wrapping and ensures horizontal scrolling */
+    word-wrap: break-word;
+    white-space: nowrap; 
 }
 
 .results-table th, .points-table th {
@@ -310,7 +310,7 @@ footer {
     color: #194419;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 1000px) {
     nav a {
         float: none;
         width: 70%;
@@ -352,7 +352,7 @@ footer {
 
     .results-table table, .points-table table {
         font-size: 10px;
-        width: 20%;
+        width: 40%; /* tämä niin taulukko ei glitchaa */
         overflow-y: auto; 
         overflow-x: auto; 
     }
@@ -375,7 +375,7 @@ footer {
     }
 
     .center2 {
-        font-size: 2em; /* Smaller font size for .center2 */
+        font-size: 2em; 
     }
 }
 
@@ -391,7 +391,7 @@ footer {
 
     .results-table table, .points-table table {
         font-size: 12px; 
-        width: 20%;
+        width: 40%;/* tämä niin taulukko ei glitchaa */
     }
 
     .P4Pcontent, .P4Pcontentheros {
@@ -401,18 +401,18 @@ footer {
     }
 
     h1 {
-        font-size: 2em; /* Smaller font size for h1 */
+        font-size: 2em; 
     }
 
     h2 {
-        font-size: 1.2em; /* Smaller font size for h2 */
+        font-size: 1.2em; 
     }
 
     h3 {
-        font-size: 1em; /* Smaller font size for h3 */
-    }
+        font-size: 1em; 
 
     .center2 {
-        font-size: 1.5em; /* Smaller font size for .center2 */
+        font-size: 1.5em; 
     }
+}
 }
