--- a/styles.css
+++ b/styles.css
@@ -321,8 +321,9 @@ footer {
     }
 
     .fighter-image {
+        max-width: 100%;
+        max-height: 200px; /* Maintain aspect ratio */
         margin: 0 0 20px 0;
-        max-width: 30%;
     }
 
     .record {
@@ -374,5 +375,11 @@ footer {
 
     .center2 {
         font-size: 1.5em;
+    }
+
+    .fighter-image {
+        max-width: 100%;
+        max-height: 200x; /* Ensure aspect ratio is maintained */
+        margin: 0 0 20px 0;
     }
 }
